tests/compile_fail/ktstr_test_bpf_map_write_not_path.rs
use ktstr::ktstr_test;

#[ktstr_test(bpf_map_write = 42)]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
